tweak values & css

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -5,6 +5,7 @@ body {
   width: 100vw;
   background: linear-gradient(360deg, #5dc1e6, #97daf3, #bdebfc82);
   font-size: 10px;
+  overflow: hidden;
 }
 
 button {
